fix finally find bug of wrong width motion.div

--- a/client/app/components/Home/ListArticle.scss
+++ b/client/app/components/Home/ListArticle.scss
@@ -24,7 +24,6 @@
   }
   &.limit-1 {
     grid-template-columns: repeat(1, 1fr);
-    gap: 10px;
   }
 
   .button-down {
