--- a/client/app/components/Home/ListGoodsLeft.scss
+++ b/client/app/components/Home/ListGoodsLeft.scss
@@ -1,13 +1,11 @@
 @import '@/app/[lang]/(basic-layout)/App.scss';
 
 .list-goods-left-container {
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   position: relative;
   width: 100%; // Полная ширина
   margin-bottom: 40px;
-  // @include responsive-width;
 
   .scroll-button {
     border: none;
@@ -65,11 +63,15 @@
 
   .list-goods {
     display: grid;
+    position: relative;
     gap: 15px;
-    width: 100%;
     @media (max-width: 768px) {
-      overflow-x: auto; // Добавляем горизонтальную прокрутку при необходимости
+      min-width: unset;
+      max-width: 100%;
     }
+    // @media (max-width: 768px) {
+    //   overflow-x: auto; // Добавляем горизонтальную прокрутку при необходимости
+    // }
     &.limit-5 {
       grid-template-columns: repeat(5, 1fr);
     }
@@ -83,13 +85,11 @@
     }
 
     &.limit-2 {
-      width: fit-content;
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
     }
     &.limit-1 {
       grid-template-columns: repeat(1, 1fr);
-      gap: 10px;
     }
   }
 }
