--- a/client/app/components/Home/MiniGoods.scss
+++ b/client/app/components/Home/MiniGoods.scss
@@ -11,9 +11,9 @@
       min-width: unset;
       max-width: 100%;
     }
-    @media (max-width: 520px) {
-      width: 100%;
-    }
+    // @media (max-width: 520px) {
+    //   max-width: 248px;
+    // }
     background-color: #ffffff;
     padding: 10px;
     border-radius: 15px;
